--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-blog",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/ZQZCalin/optimization-related-blog/",
+  "homepage": "https://zqzcalin.github.io/optimization-related-blog/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
